# 2dGame

./: .gitignore  CMakeLists.txt  SOILinstall.sh  info.txt
.claude/: settings.json
.github/prompts/: plan-rubricGapClosure.prompt.md
Game/02-Bubble/: BugsBunnyCrazyCastle  Makefile  Player.cpp
entrega/: info.txt
entrega/Binari/: BugsBunnyCrazyCastle  GameMacOS  SamuraiVengeanceArch  SamuraiVengeanceMac
entrega/Binari/levels/: map_0_1.tmx  map_1_2.json  map_1_2.tmx  map_2_2.json  room_A.json  room_D.tmx  room_G.json  room_K.tmx  room_M.tmx
entrega/Projecte/: CMakeLists.txt  COMPILAR.txt  SOILinstall.sh  info.txt
entrega/Projecte/images/: tiles.tsx
entrega/Projecte/levels/: map_0_0.tmx  map_0_2.tmx  map_1_1.tmx  map_1_2.json  map_1_2.tmx  map_2_0.tmx  map_2_2.tmx  room_A.tmx  room_B.json  room_B.tmx  room_E.json  room_E.tmx  room_F.tmx  room_G.tmx  room_I.json
entrega/Projecte/shaders/: particles.vert
entrega/Projecte/sounds/: README.md
entrega/Projecte/src/: AnimKeyframes.h  AudioManager.cpp  AudioManager.h  BaseEnemy.cpp  Enemy.cpp  Enemy2.cpp  Enemy2.h  Enemy3.cpp  EnemyNavigator.cpp  EnemyNavigator.h  Game.cpp  Game.h  GameConstants.h  Player.cpp  Scene.cpp  Scene.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Texture.cpp  TileMap.cpp  main.cpp
images/: tiles.tsx
levels/: main.world  map.json  map.tmx  map_0_0.json  map_0_0.tmx  map_0_1.json  map_0_1.tmx  map_0_2.json  map_0_2.tmx  map_1_0.json  map_1_0.tmx  map_1_1.json  map_1_2.json  map_1_2.tmx  map_2_0.json  map_2_0.tmx  map_2_1.json  map_2_1.tmx  room_A.json  room_A.tmx  room_B.json  room_B.tmx  room_C.json  room_C.tmx  room_D.json  room_E.json  room_E.tmx  room_F.json  room_H.json  room_H.tmx  room_I.tmx  room_J.json  room_J.tmx  room_K.json  room_L.json  room_L.tmx  room_M.json  room_M.tmx
shaders/: bg.frag  bg.vert  particles.frag  texture.frag  texture.vert
src/: AnimKeyframes.h  AudioManager.cpp  AudioManager.h  BaseEnemy.h  Enemy.cpp  Enemy.h  Enemy2.cpp  Enemy2.h  Enemy3.cpp  Enemy3.h  EnemyNavigator.cpp  Game.cpp  Game.h  GameConstants.h  Player.cpp  Player.h  Quad.cpp  Scene.cpp  Scene.h  Shader.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Text.cpp  Texture.cpp  TexturedQuad.cpp  TileMap.cpp  TileMap.h  main.cpp
